kubernetes/apps/life-in-the-uk-quiz/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: life-in-the-uk-quiz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: life-in-the-uk-quiz.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
  tls:
    - hosts:
        - life-in-the-uk-quiz.leehosanganson.dev
      secretName: life-in-the-uk-quiz-tls
